--- a/src/jamtaba/gui/NinjamPanel.ui
+++ b/src/jamtaba/gui/NinjamPanel.ui
@@ -118,32 +118,32 @@
          <property name="bottomMargin">
           <number>6</number>
          </property>
-         <item row="3" column="4" alignment="Qt::AlignHCenter">
-          <widget class="QPushButton" name="soloButton">
+         <item row="0" column="1" rowspan="6">
+          <widget class="QSlider" name="levelSlider">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
-           <property name="maximumSize">
-            <size>
-             <width>50</width>
-             <height>16777215</height>
-            </size>
+           <property name="maximum">
+            <number>120</number>
            </property>
-           <property name="layoutDirection">
-            <enum>Qt::LeftToRight</enum>
+           <property name="value">
+            <number>100</number>
            </property>
-           <property name="text">
-            <string>SOLO</string>
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
            </property>
-           <property name="checkable">
-            <bool>true</bool>
+           <property name="tickPosition">
+            <enum>QSlider::TicksBelow</enum>
+           </property>
+           <property name="tickInterval">
+            <number>0</number>
            </property>
           </widget>
          </item>
-         <item row="1" column="3">
+         <item row="0" column="2" rowspan="6">
           <spacer name="horizontalSpacer_3">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -159,13 +159,51 @@
            </property>
           </spacer>
          </item>
-         <item row="2" column="4" alignment="Qt::AlignHCenter">
+         <item row="1" column="3" colspan="3">
+          <spacer name="verticalSpacer">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>6</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="0" column="3" colspan="3" alignment="Qt::AlignHCenter">
+          <widget class="QLabel" name="labelMetronomeIcon">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="pixmap">
+            <pixmap resource="../resources/jamtaba.qrc">:/images/metronome.png</pixmap>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="4">
           <widget class="QPushButton" name="muteButton">
            <property name="enabled">
             <bool>true</bool>
            </property>
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -180,7 +218,7 @@
             <enum>Qt::LeftToRight</enum>
            </property>
            <property name="text">
-            <string>MUTE</string>
+            <string>M</string>
            </property>
            <property name="iconSize">
             <size>
@@ -193,23 +231,11 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="4">
-          <widget class="QWidget" name="panPanel" native="true">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>70</width>
-             <height>16777215</height>
-            </size>
-           </property>
+         <item row="2" column="3" colspan="2">
+          <widget class="QWidget" name="widget_2" native="true">
            <layout class="QHBoxLayout" name="horizontalLayout_2">
             <property name="spacing">
-             <number>6</number>
+             <number>0</number>
             </property>
             <property name="leftMargin">
              <number>0</number>
@@ -223,7 +249,7 @@
             <property name="bottomMargin">
              <number>0</number>
             </property>
-            <item>
+            <item alignment="Qt::AlignBottom">
              <widget class="QLabel" name="labelPanL">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -240,12 +266,12 @@
              </widget>
             </item>
             <item>
-             <widget class="QSlider" name="panSlider">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
+             <widget class="QDial" name="panSlider">
+              <property name="maximumSize">
+               <size>
+                <width>32</width>
+                <height>32</height>
+               </size>
               </property>
               <property name="minimum">
                <number>-4</number>
@@ -253,33 +279,12 @@
               <property name="maximum">
                <number>4</number>
               </property>
-              <property name="singleStep">
-               <number>1</number>
-              </property>
               <property name="pageStep">
                <number>1</number>
               </property>
-              <property name="value">
-               <number>0</number>
-              </property>
-              <property name="sliderPosition">
-               <number>0</number>
-              </property>
-              <property name="tracking">
-               <bool>true</bool>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="invertedAppearance">
-               <bool>false</bool>
-              </property>
-              <property name="tickPosition">
-               <enum>QSlider::TicksBelow</enum>
-              </property>
              </widget>
             </item>
-            <item>
+            <item alignment="Qt::AlignBottom">
              <widget class="QLabel" name="labelPanR">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -298,7 +303,32 @@
            </layout>
           </widget>
          </item>
-         <item row="0" column="0" rowspan="4">
+         <item row="4" column="3">
+          <widget class="QPushButton" name="soloButton">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="layoutDirection">
+            <enum>Qt::LeftToRight</enum>
+           </property>
+           <property name="text">
+            <string>S</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0" rowspan="6">
           <widget class="QWidget" name="peaks" native="true">
            <layout class="QHBoxLayout" name="horizontalLayout">
             <property name="spacing">
@@ -354,52 +384,21 @@
            </layout>
           </widget>
          </item>
-         <item row="0" column="2" rowspan="4">
-          <widget class="QSlider" name="levelSlider">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="maximum">
-            <number>120</number>
-           </property>
-           <property name="value">
-            <number>100</number>
-           </property>
+         <item row="3" column="3" colspan="2">
+          <spacer name="verticalSpacer_2">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
-           <property name="tickPosition">
-            <enum>QSlider::TicksBelow</enum>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
            </property>
-           <property name="tickInterval">
-            <number>0</number>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="4" alignment="Qt::AlignHCenter">
-          <widget class="QLabel" name="labelMetronomeIcon">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
+           <property name="sizeHint" stdset="0">
             <size>
-             <width>32</width>
-             <height>32</height>
+             <width>20</width>
+             <height>6</height>
             </size>
            </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="pixmap">
-            <pixmap resource="../resources/jamtaba.qrc">:/images/metronome.png</pixmap>
-           </property>
-          </widget>
+          </spacer>
          </item>
         </layout>
        </widget>
